# CppTaskTracker

./: .gitignore  CMakeLists.txt  Dockerfile  clean_up.sh  readMe.md
src/: Task.cpp  Task.h  build_script.sh  data.txt  main  main.cpp  run_script.sh  tests.cpp
src/core/: Display.cpp  Display.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  TaskSerializer.cpp  TaskSerializer.h  app.cpp  app.h
src/headers/taskTracker/: Display.h  Task.h  TaskManager.h  app.h  random_utils.h  string_utils.h
src/headers/tests/: display_tests.h  input_processing_tests.h  integration_test.h  string_tests.h  taskManager_tests.h  task_tests.h  test_suit.h
src/taskTracker/core/: Display.cpp  Task.cpp  TaskManager.cpp  app.cpp
src/taskTracker/utils/: random_utils.cpp  string_utils.cpp
src/tests/: display_tests.cpp  string_tests.cpp  string_tests.h  taskManager_tests.cpp  taskManager_tests.h  task_tests.cpp  task_tests.h
src/tests/fileSamples/: sample1.txt  sample2.txt  sample4.txt  sample5.txt
src/tests/integrationTests/: integration_test.cpp
src/tests/unitTests/: display_tests.cpp  input_processing_tests.cpp
src/tests/unitTests/fileSamples/: sample4.txt
src/utils/: random_utils.cpp  random_utils.h  string_utils.cpp  string_utils.h
